hphp/hack/test/typecheck/fc_enum_cyclic_constraint.php
<?hh

enum E: int as E {}
